--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ setup_requires=
 install_requires=
     farama-notifications
     gymnasium>=0.27
-    numpy
+# CL: numpy<2.0 added to be compatible with cognitive xai project
+    numpy<2.0
     pygame>=2.0.2
     matplotlib
     pandas
